Fix pf-image spacing and education/experience image spacing

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ h3 {
 /* absolute positioning is a hack for this website */
 #profile-picture {
   max-width: 12rem;
-  min-width: 3rem;
+  min-width: 1rem;
   margin: auto;
 }
 
@@ -134,7 +134,8 @@ h3 {
 }
 
 #footer-text {
-  font-size: 3vh;
+  font-size: 2vh;
+  margin: auto;
   text-shadow: 1px 0 1px #2e2e2e;
 }
 
@@ -267,8 +268,9 @@ body {
 }
 .image-small {
   background-color: var(--lightGrey);
-  height: auto;
   max-width: 10vh;
+  height: auto;
+  margin: auto;
 }
 
 .image-link {
@@ -277,17 +279,18 @@ body {
 
 .image-rounded {
   max-width: 100%;
-  max-height: 100%;
-  height: auto;
+  max-height: 16vh;
+  min-height: 2vh;
   border-radius: 50%;
   border: 3px solid black;
+  margin-top: 3vh;
 }
 
 .image-center {
-  display: flex;
-  margin: auto;
-  align-items: center;
+  display: block;
   justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 body::-webkit-scrollbar {
